--- a/TPGESOC/src/main/resources/templates/GESOC_AsociarIngresoAEgreso.hbs
+++ b/TPGESOC/src/main/resources/templates/GESOC_AsociarIngresoAEgreso.hbs
@@ -22,13 +22,15 @@
     <!-- partial:index.partial.html -->
     <div class="form">
 
-        <button type="submit" class="button button-back" onclick="window.location.href='/menu_logueado'">Volver al menú
-            principal</button>
+        <button type="submit" class="button button-back" onclick="window.location.href='/menu_logueado'">VOLVER ATRAS
+            </button>
 
         <h2>Asociar ingresos con egresos</h2>
 
+
         <div class="tab-content">
             <div id="compra">
+
                 <br>
                 <h3>Visualice los Egresos</h3>
 
@@ -121,11 +123,10 @@
                         <span class="close">&times;</span>
                         <p>Su proyecto se ha creado con éxito</p>
                         <button type="mybtn" class="button button-modal"
-                            onclick="window.location.href='/vincular'">OK</button>
+                            onclick="window.location.href='/menu_logueado'">OK</button>
                     </div>
                 </div>
 
-                </form>
 
 
             </div>
