--- a/TPGESOC/src/main/resources/templates/GESOC_AsociarItemACategoria.hbs
+++ b/TPGESOC/src/main/resources/templates/GESOC_AsociarItemACategoria.hbs
@@ -22,8 +22,7 @@
   <!-- partial:index.partial.html -->
   <div class="form">
 
-    <button type="submit" class="button button-back" onclick="window.location.href='/menu_logueado'">Volver al menú
-      principal</button>
+    <button type="submit" class="button button-back" onclick="window.location.href='/menu_logueado'">VOLVER ATRAS</button>
 
     <br>
     <h2>Asociar Producto a Categoria</h2>
