--- a/TPGESOC/src/main/resources/templates/GESOC_VisualizarIngEgPorCategoria.hbs
+++ b/TPGESOC/src/main/resources/templates/GESOC_VisualizarIngEgPorCategoria.hbs
@@ -23,8 +23,7 @@
     <!-- partial:index.partial.html -->
     <form class="" action="/buscar_productos_de_categoria" method="get" style="">
 
-      <button type="submit" class="button button-back" onclick="window.location.href='/menu_logueado'">Volver al menú
-        principal</button>
+      <button type="submit" class="button button-back" onclick="window.location.href='/menu_logueado'">VOLVER ATRAS</button>
 
       <h2>Visualizar Items por categoría</h2>
 
