--- a/TPGESOC/src/main/resources/templates/GESOC_Bandeja_Mensajes.hbs
+++ b/TPGESOC/src/main/resources/templates/GESOC_Bandeja_Mensajes.hbs
@@ -21,8 +21,7 @@
   <!-- partial:index.partial.html -->
   <div class="form">
 
-    <button type="submit" class="button button-back" onclick="window.location.href='/menu_logueado'">Volver al menú
-      principal</button>
+    <button type="submit" class="button button-back" onclick="window.location.href='/menu_logueado'">VOLVER ATRAS</button>
 
     <div class="tab-content">
       <div id="compra">
