--- a/TPGESOC/src/main/resources/templates/GESOC_Cambiar_Usuario.hbs
+++ b/TPGESOC/src/main/resources/templates/GESOC_Cambiar_Usuario.hbs
@@ -26,8 +26,7 @@
   <!-- partial:index.partial.html -->
   <div class="form">
 
-    <button type="submit" class="button button-back" onclick="window.location.href='/menu_logueado'">Volver al menú
-      principal</button>
+    <button type="submit" class="button button-back" onclick="window.location.href='/menu_logueado'">VOLVER ATRAS</button>
 
     <div>
       <div id="signup">
