--- a/TPGESOC/src/main/resources/templates/GESOC_Login.hbs
+++ b/TPGESOC/src/main/resources/templates/GESOC_Login.hbs
@@ -37,8 +37,7 @@
   <!-- partial:index.partial.html -->
   <div class="form">
 
-    <button type="submit" class="button button-back" onclick="window.location.href='/menu_inicio'">Volver al menú
-      principal</button>
+    <button type="submit" class="button button-back" onclick="window.location.href='/menu_inicio'">VOLVER ATRAS</button>
 
     <ul class="tab-group">
 
