--- a/TPGESOC/src/main/resources/templates/GESOC_VincularIngresoAProyecto.hbs
+++ b/TPGESOC/src/main/resources/templates/GESOC_VincularIngresoAProyecto.hbs
@@ -21,8 +21,7 @@
     <!-- partial:index.partial.html -->
     <div class="form">
 
-        <button type="submit" class="button button-back" onclick="window.location.href='/menu_logueado'">Volver al menú
-            principal</button>
+        <button type="submit" class="button button-back" onclick="window.location.href='/menu_logueado'">VOLVER ATRAS</button>
 
         <br>
         <h2>Vincular Proyecto con Ingreso</h2>
